# enumgen-th

./: enumgen-th.cabal
src/Data/EnumGen/: TH.hs
